<resources>
    <string name="app_name">MudaT</string>
    <string name="Mostrar">Mostrar</string>
    <string name="Registrousuario">REGISTRO USUARIO</string>
    <string name="Registrousuariolistar">Listar Usuarios</string>
    <string name="title_activity_login">Sign in</string>


    <string name="Nombreusuario">Nombre de Usuario</string>
    <string name="Identificacion">Indentificación</string>
    <string name="Email">Email</string>
    <string name="Telefono">Teléfono</string>
    <string name="Contrasena">Contraseña</string>
    <string name="rRepetircontrasena">Repetir Contraseña</string>
    <string name="Registrar">Registrar</string>
    <string name="Categoria">Categoria</string>
    <string name="Nuevo">Nuevo</string>
    <string name="Guardar">Guardar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Lista">Lista</string>
    <string name="Anuncios">Anuncios</string>
    <string name="RegistrodeUsuario">Registro de Usuario</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="salir">Salir</string>
    <string name="crearusuario">Crear Usuario</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="Listausuario">Lista de Usuarios</string>
    <string name="Publicaciones">Publicaciones</string>
    <string name="mipublicaciones">Mis Publicaciones</string>
    <string name="Titulo">Título</string>
    <string name="detalle">Detalle</string>
    <string name="Ubicación">Ubicación</string>
    <string name="precio">Precio</string>
    <string name="condicion">Condición</string>
    <string name="contacto">Contacto</string>
    <string name="crearanuncio">Crear Anuncio</string>
    <string name="contrasenaanterior">Contraseña Anterior</string>
    <string name="Iniciarsesion">Iniciar Sesión</string>
    <string name="nombreusuario">Nombre de Usuario</string>
    <string name="crearcuentadeusuario">Crear Cuenta</string>
    <string name="usuario">Usuario</string>

    <string name="title_activity_actividad_iniciar">ActividadIniciar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_splash_ini">SplashActivityIni</string>

    <string name="title_activity_splash_inic">SplashActivityInic</string>
    <string name="repetircontrasena">Repetir Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipousuario">Tipo de Usuario</string>
    <string name="publicador">Publicador</string>
    <string name="cliente">Cliente</string>
    <string name="mantenerlasesioninciada">Mantener La Sesión Iniciada</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="megusta">Me Gusta</string>
    <string name="listadepublicaciones">PUBLICACIONES</string>
    <string name="perfilusuario">PERFIL DE USUARIO</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="comentario">Comentario</string>

</resources>
