<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itla.mudat.View.RegistroAnuncio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/Txtnombretitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Titulo"
                        android:inputType="text"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="normal|bold" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/Txtidetalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detalle"
                        android:inputType="text"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="normal|bold" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/Txtubicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Ubicación"
                        android:inputType="text"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="normal|bold" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/Txtprecios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/precio"
                        android:inputType="textNoSuggestions|numberDecimal"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="normal|bold" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/Txtcondicion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/condicion"
                        android:inputType="text"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="normal|bold" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Bregistroanuncio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="8dp"

                    android:layout_marginRight="8dp"
                    android:layout_marginTop="2dp"

                    android:layout_weight="1"
                    android:background="#dd4b39"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="15"
                    android:text="@string/Registrar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
